Added changes to enable k8s connectivity from outside cluster.
